# DivorceLawyerAssistant

./: .coveragerc  .cursorignore  .dockerignore  .flake8  .gitignore  .sourcery.yaml  Dockerfile  README.md  docker-compose.yml  errors_log.md  main.py  mypy.ini  pyproject.toml  pytest.ini
.cursor/rules/: python-projects-guide-cursorrules-prompt-file.mdc
.github/ai_analyzer_pdf/: ai_analyzer_service.py
.github/workflows/: flake8_mypy_for_pull_requst_and_push.yml  tests_for_pull_request.yml
src/: main.py
src/ai_analyzer_pdf/: ai_analyzer_service.py  prompts.py
src/core/: __init__.py  config.py  constants.py  types.py
src/core/config/: __init__.py  logging_config.py  settings.py
src/core/exceptions/: base.py  config.py  storage.py
src/core/storage/: cloud_storage.py  decorators.py  exceptions.py  local_storage.py  shemas.py  storage.py
src/domain/: __init__.py  glossary.md
src/domain/document/: exceptions.py
src/domain/storage/: exceptions.py
src/infrastructure/database/: __init__.py
src/infrastructure/persistence/: __init__.py
src/infrastructure/storage/: __init__.py  decorators.py
src/knowledge_storage/: exceptions.py  schemas.py
src/knowledge_storage/interfaces/: __init__.py  base_entity_interface.py  knowledge_category_interface.py  knowledge_entity_interface.py  knowledge_item_interface.py  knowledge_storage_interface.py  permission_interface.py  searchable_interface.py  taggable_interface.py  versionable_interface.py
src/pdf_extractor/: geometry_utils.py  main_pdf_extractor.py  page_formatter.py  parser_pdf.py  schemas.py  scraper_pdf.py  table_processor.py  text_processor.py  widger_processor.py  widget_processor.py
src/services/: __init__.py  check_pdf_fields.py
src/services/ai_service/: ai_text_validator.py  decorators.py  decorators_for_ai.py  prompts.py  validate_fields_with_ai.py
src/services/documant_database/: decorators.py  exceptions.py  schemas.py
src/services/document_database/: decorators.py  exceptions.py
src/services/pdf_extractor/: __init__.py  main_pdf_extractor.py  page_formatter.py  parser_pdf.py  pdf_extractor.py  scraper_pdf.py  table_processor.py  text_processor.py  widger_processor.py
src/services/pdf_tools/: annotator.py  decorators.py  geometry_utils.py  page_formatter.py  parser_pdf.py  pdf_extractor.py  pdf_saver.py  scraper_pdf.py  table_processor.py  (+2 more)
src/templates/: data_for_rag.html  index.html  simple_check_pdf_forms.html
src/utils/: __init__.py  get_length_prompt.py  path_handler.py  timer_of_execution.py
static/: script.js  styles.css
(+133 files in other folders)
