[tool.black]
line-length = 79

[tool.poetry]
name = "Check PDF Form with AI"
version = "0.1.0"
description = ""
authors = ["Alex Grytsai <grytsai.alex@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pypdf2 = "^3.0.1"
pymupdf = "^1.25.3"
pydantic = "^2.10.6"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
pympler = "^1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
