[tool.black]
line-length = 79

[tool.poetry]
name = "Check PDF Form with AI"
version = "0.1.0"
description = ""
authors = ["Alex Grytsai <grytsai.alex@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pypdf2 = "^3.0.1"
pymupdf = "^1.25.3"
pydantic = "^2.10.6"
tabulate = "^0.9.0"
redis = "^5.2.1"
types-tabulate = "^0.9.0.20241207"
tiktoken = "^0.9.0"
python-dotenv = "^1.0.1"
openai = "^1.65.4"
fastapi = "^0.115.11"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
pympler = "^1.1"
mypy = "^1.15.0"
psutil = "^7.0.0"
matplotlib = "^3.10.1"
types-psutil = "^7.0.0.20250218"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
