[tool.black]
line-length = 79

[tool.poetry]
name = "Divorce Lawyer AI Assistant"
version = "0.1.0"
description = ""
authors = ["Alex Grytsai <grytsai.alex@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pymupdf = "^1.25.3"
pydantic = "^2.10.6"
tabulate = "^0.9.0"
redis = "^5.2.1"
types-tabulate = "^0.9.0.20241207"
tiktoken = "^0.9.0"
python-dotenv = "^1.0.1"
openai = "^1.65.4"
fastapi = "^0.115.11"
email-validator = "^2.2.0"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
python-magic = "^0.4.27"
jinja2 = "^3.1.6"
google-cloud-storage = "^3.1.0"
google-auth = "^2.38.0"
google-api-core = "^2.24.2"
google-cloud-storage-control = "^1.3.1"


[tool.poetry.group.dev.dependencies]
pympler = "^1.1"
psutil = "^7.0.0"
python-magic-bin = "^0.4.14"
sourcery = "^1.35.0"


[tool.poetry.group.test.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
mypy = "^1.15.0"
types-psutil = "^7.0.0.20250218"
matplotlib = "^3.10.1"
coverage = "^7.7.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
